--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "private": true,
   "scripts": {
+    "start": "node index.js",
     "lint": "eslint .",
     "test": "npm run lint"
   },
   "devDependencies": {
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "express": "4.16.3",
+    "hbs": "4.0.1",
+    "node-fetch": "2.1.1",
+    "query-string": "6.0.0"
   }
 }
