--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "4.16.3",
     "hbs": "4.0.1",
     "node-fetch": "2.1.1",
-    "query-string": "6.0.0"
+    "query-string": "6.0.0",
+    "url-search-params": "0.10.0"
   }
 }
