--- a/package.json
+++ b/package.json
@@ -2,10 +2,27 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "server": "node index.js",
+    "start": "npm-run-all build server",
+    "build": "webpack",
+    "build:watch": "webpack --watch"
   },
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "css-loader": "0.28.11",
+    "express": "4.16.3",
+    "file-loader": "1.1.11",
+    "hbs": "4.0.1",
+    "hbs-utils": "0.0.4",
+    "html-loader": "0.5.5",
+    "style-loader": "0.20.3",
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.2",
+    "webpack": "4.1.1",
+    "webpack-cli": "2.0.12"
   }
 }
