--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "private": true,
   "scripts": {
+    "start": "webpack --mode development --watch",
+    "build": "webpack --mode production",
     "lint": "eslint .",
     "test": "npm run lint"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.4",
+    "babel-preset-env": "1.6.1",
+    "clean-webpack-plugin": "0.1.19",
+    "css-loader": "0.28.11",
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "file-loader": "1.1.11",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.0.6",
+    "style-loader": "0.20.3",
+    "webpack": "4.1.1",
+    "webpack-cli": "2.0.12"
   }
 }
