Helper для запросов, определился с оформлением компонентов

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,6 +1,4 @@
 {
-    "extends": "hrundel/browser",
-    "parserOptions": {
-        "sourceType": "module"
-    }
+    "parser": "babel-eslint",
+    "extends": "hrundel/browser"
 }
