--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "babel-core": "6.26.0",
+    "babel-eslint": "8.2.2",
     "babel-loader": "7.1.4",
     "babel-preset-env": "1.6.1",
     "clean-webpack-plugin": "0.1.19",
@@ -16,7 +17,7 @@
     "eslint-config-hrundel": "1.3.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.0.6",
+    "html-webpack-plugin": "3.0.7",
     "style-loader": "0.20.3",
     "webpack": "4.1.1",
     "webpack-cli": "2.0.12"
