--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,14 @@
 {
-    "extends": "hrundel/node"
+    "extends": "hrundel/node",
+    "parser": "babel-eslint",
+    "env": {
+        "browser": true,
+        "node": true
+    },
+    "rules": {
+        "semi": 0
+    },
+    "parserOptions": {
+        "ecmaVersion": 2017
+    }
 }
