--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
     "test": "npm run lint"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.2.2",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-preset-env": "1.6.1",
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "postcss-modules": "1.1.0"
+  },
+  "dependencies": {
+    "body-parser": "1.18.2",
+    "express": "4.16.3"
   }
 }
