--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "express": "4.16.3",
+    "hbs": "4.0.1"
   }
 }
