--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "ejs": "2.5.7",
+    "express": "4.16.3",
+    "hbs": "4.0.1",
+    "morgan": "1.9.0",
+    "node-fetch": "2.1.1"
   }
 }
