--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "dev": "nodemon index.js",
+    "start:dev": "nodemon index.js",
+    "start:production": "node index.js",
+    "webpack:dev": "webpack --mode development --watch",
+    "webpack:production": "webpack --mode production",
+    "start": "npm-run-all webpack:production start:production",
+    "dev": "npm-run-all --parallel start:dev webpack:dev",
     "test": "npm run lint"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.4",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2016": "6.24.1",
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0",
-    "nodemon": "1.17.2"
+    "nodemon": "1.17.2",
+    "npm-run-all": "4.1.2",
+    "webpack": "4.2.0",
+    "webpack-cli": "2.0.12"
   },
   "dependencies": {
     "express": "4.16.3",
