--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-hrundel": "1.3.0"
   },
   "dependencies": {
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "node-fetch": "2.1.1"
   }
 }
