--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "start": "node index.js"
   },
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "body-parser": "1.18.2",
+    "express": "4.16.3",
+    "request": "2.85.0",
+    "request-promise": "4.2.2"
   }
 }
