--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "4.16.3"
   },
   "devDependencies": {
-    "eslint": "4.8.0",
+    "eslint": "4.19.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-config-hrundel": "1.3.0"
   }
 }
