--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "test",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "lint": "eslint .",
@@ -7,5 +9,8 @@
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "express": "4.16.3"
   }
 }
