--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "cors": "2.8.4",
+    "dotenv": "5.0.1",
+    "express": "4.16.3",
+    "hbs": "4.0.1",
+    "stylus": "0.54.5",
+    "xmlhttprequest": "1.8.0"
   }
 }
