--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "stylus": "stylus -o public/css/ stylus/"
   },
   "devDependencies": {
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "stylus": "0.54.5"
+  },
+  "dependencies": {
+    "express": "4.16.3"
   }
 }
