--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm run lint"
   },
   "devDependencies": {
+    "autoprefixer": "8.2.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.2",
     "babel-loader": "7.1.4",
@@ -17,9 +18,10 @@
     "eslint-config-hrundel": "1.3.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.0.7",
+    "html-webpack-plugin": "3.1.0",
+    "postcss-loader": "2.1.3",
     "style-loader": "0.20.3",
-    "webpack": "4.1.1",
-    "webpack-cli": "2.0.12"
+    "webpack": "4.2.0",
+    "webpack-cli": "2.0.13"
   }
 }
