--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "stylelint": "stylelint ./public/css/*.css",
+    "start": "node ./server.js"
   },
   "devDependencies": {
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "stylelint": "7.3.1",
+    "stylelint-config-hrundel": "1.0.3"
   },
   "dependencies": {
     "express": "4.16.3",
