--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "private": true,
   "scripts": {
+    "start": "node server/index.js",
     "lint": "eslint .",
     "test": "npm run lint"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "config": "^1.30.0",
+    "express": "^4.16.2",
+    "hbs": "^4.0.1",
+    "morgan": "^1.9.0",
+    "newsapi": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "4.8.0",
