--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
     "test": "npm run lint"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "express": "4.16.3"
   }
 }
