--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "body-parser": "1.18.2",
+    "express": "4.16.3",
+    "handlebars": "4.0.11",
+    "lokijs": "1.5.3",
+    "shuffle-array": "1.0.1"
   }
 }
