--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "private": true,
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint . --config .eslintrc.modules.json",
     "test": "npm run lint"
   },
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.4",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-register": "6.26.0",
+    "express": "4.16.3",
+    "nodemon": "1.17.2"
   }
 }
