--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-hrundel": "1.3.0"
   },
   "dependencies": {
+    "body-parser": "1.18.2",
     "express": "4.16.3",
     "node-fetch": "2.1.1",
     "nodemon": "1.17.2"
