--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "postcss-modules": "1.1.0"
   },
   "dependencies": {
+    "babel-polyfill": "6.26.0",
     "express": "4.16.3"
   }
 }
