--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "scripts": {
+    "build": "parcel build client/index.html -d public --public-url ./",
+    "start": "npm run build && node index.js",
     "lint": "eslint .",
     "test": "npm run lint"
   },
@@ -10,6 +12,7 @@
     "babel-plugin-transform-react-jsx": "6.24.1",
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0",
+    "parcel-bundler": "1.6.2",
     "postcss-modules": "1.1.0"
   },
   "dependencies": {
