--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "start": "webpack --mode development --watch",
+    "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "lint": "eslint .",
     "test": "npm run lint"
+  },
+  "dependencies": {
+    "babel-polyfill": "6.26.0"
   },
   "devDependencies": {
     "autoprefixer": "8.2.0",
@@ -22,6 +25,7 @@
     "postcss-loader": "2.1.3",
     "style-loader": "0.20.3",
     "webpack": "4.2.0",
-    "webpack-cli": "2.0.13"
+    "webpack-cli": "2.0.13",
+    "webpack-dev-server": "3.1.1"
   }
 }
