--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "private": true,
   "scripts": {
-    "lint": "eslint .",
-    "test": "npm run lint"
+    "lint": "eslint . && stylelint ./public/*.css",
+    "test": "npm run lint",
+    "build": "webpack",
+    "server": "node index.js",
+    "start": "npm-run-all build server"
   },
   "devDependencies": {
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "npm-run-all": "4.1.2",
+    "stylelint": "7.3.1",
+    "stylelint-config-hrundel": "1.0.3",
+    "webpack": "4.2.0",
+    "webpack-cli": "2.0.13"
   },
   "dependencies": {
-    "ejs": "2.5.7",
-    "express": "4.16.3",
-    "hbs": "4.0.1",
-    "morgan": "1.9.0",
-    "node-fetch": "2.1.1"
+    "express": "4.16.3"
   }
 }
