--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "body-parser": "1.18.2",
     "express": "4.16.3",
     "hbs": "4.0.1",
+    "http-status-codes": "1.3.0",
+    "node-fetch": "2.1.2",
+    "querystring": "0.2.0",
     "stylelint-config-hrundel": "1.0.3"
   }
 }
