--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "lint": "eslint .",
+    "lint": "eslint ./src/",
     "test": "npm run lint"
   },
   "dependencies": {
