--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "express": "4.16.3",
+    "fetch": "1.1.0",
+    "hbs": "4.0.1",
+    "node-fetch": "2.1.1",
+    "querystring": "0.2.0"
   }
 }
