--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "hrundel/browser",
+    "extends": ["hrundel/browser", "plugin:react/recommended"],
     "parserOptions": {
         "sourceType": "module",
         "ecmaFeatures": {
@@ -8,8 +8,18 @@
         }
     },
 
+    "plugins": ["react"],
+    "settings": {
+        "react": {
+            "pragma": "Component"
+        }
+    },
+
     "rules": {
         "newline-before-return": ["off"],
-        "no-return-assign": ["off"]
+        "no-return-assign": ["off"],
+        "react/no-unknown-property": ["off"],
+        "react/prop-types": ["off"],
+        "react/jsx-key": ["off"]
     }
 }
