--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-transform-react-jsx": "6.24.1",
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0",
+    "eslint-plugin-react": "7.7.0",
     "parcel-bundler": "1.6.2",
     "postcss-modules": "1.1.0"
   },
