--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "express": "4.16.3",
+    "express-handlebars": "3.0.0",
+    "handlebars": "4.0.11",
+    "node-fetch": "2.1.1"
   }
 }
