--- a/public/.eslintrc
+++ b/public/.eslintrc
@@ -1,3 +1,8 @@
 {
-    "extends": "hrundel/browser"
+    "extends": "hrundel/browser",
+    "rules": {
+        "no-alert": 0,
+        "no-return-assign": 0,
+        "no-invalid-this": 0
+    }
 }
