--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "scripts": {
     "lint": "eslint .",
     "test": "npm run lint",
+    "build": "webpack",
     "start": "node index.js"
   },
   "devDependencies": {
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "webpack": "4.3.0",
+    "webpack-cli": "2.0.13"
   },
   "dependencies": {
     "body-parser": "1.18.2",
