--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
     "start": "webpack && node index.js",
     "lint": "eslint .",
     "test": "npm run lint",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "devDependencies": {
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
-  },
-  "dependencies": {
+    "eslint-config-hrundel": "1.3.0",
     "babel-loader": "7.1.4",
     "css-loader": "0.28.11",
-    "express": "4.16.3",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "hbs": "4.0.1",
     "html-loader": "0.5.5",
-    "node-fetch": "2.1.1",
     "node-sass": "4.7.2",
-    "request": "2.85.0",
     "sass-loader": "6.0.7",
     "style-loader": "0.20.3",
     "webpack": "4.1.1",
     "webpack-cli": "2.0.12"
+
+  },
+  "dependencies": {
+    "express": "4.16.3",
+    "hbs": "4.0.1"
   }
 }
