--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "devDependencies": {
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "webpack-cli": "2.0.13"
   },
   "dependencies": {
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "webpack": "4.4.1"
   }
 }
