--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "test": "npm run lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "config": "^1.30.0",
     "express": "^4.16.2",
     "hbs": "^4.0.1",
-    "morgan": "^1.9.0",
-    "newsapi": "^2.2.0"
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "eslint": "4.8.0",
