--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0",
     "http-status-codes": "1.3.0",
+    "stylelint": "7.3.1",
+    "stylelint-config-hrundel": "1.0.3",
     "webpack": "4.1.1",
     "webpack-cli": "2.0.12"
   },
