--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "start": "npx webpack && node index.js"
   },
   "devDependencies": {
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "webpack": "4.5.0",
+    "webpack-cli": "2.0.14"
+  },
+  "dependencies": {
+    "express": "4.16.3"
   }
 }
