--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "private": true,
   "scripts": {
+    "start": "node index.js",
     "lint": "eslint .",
     "test": "npm run lint"
   },
   "devDependencies": {
     "eslint": "4.8.0",
     "eslint-config-hrundel": "1.3.0"
+  },
+  "dependencies": {
+    "express": "4.16.3"
   }
 }
