--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,7 @@
 {
-    "extends": "hrundel/node"
+  "extends": "hrundel/browser",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  }
 }
