--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
   "private": true,
   "scripts": {
-    "lint": "eslint .",
-    "test": "npm run lint"
+    "build": "webpack --config ./webpack.production.config.js --progress --profile",
+    "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "test": "npm run lint",
+    "lint": "eslint ./src/. && stylelint *.css **/*.css"
+  },
+  "dependencies": {
+    "stylelint": "7.3.1",
+    "stylelint-config-hrundel": "1.0.3"
   },
   "devDependencies": {
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-stage-2": "6.24.1",
     "eslint": "4.8.0",
-    "eslint-config-hrundel": "1.3.0"
+    "eslint-config-hrundel": "1.3.0",
+    "html-webpack-plugin": "3.2.0",
+    "imports-loader": "0.8.0",
+    "webpack": "4.6.0",
+    "webpack-cleanup-plugin": "0.5.1",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-server": "3.1.4"
   }
 }
